@@ -1,16 +1,5 @@
 package com.workonnection.backend.service;
 
-import java.time.Instant;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
-import java.time.Instant;
-import java.time.LocalDate;
-
-import org.springframework.http.HttpStatus;
-import org.springframework.stereotype.Service;
- 
 import com.workonnection.backend.dto.ComentarioDTO;
 import com.workonnection.backend.dto.VagaDTO;
 import com.workonnection.backend.dto.VagaResponseDTO;
@@ -20,6 +9,15 @@ import com.workonnection.backend.model.Usuario;
 import com.workonnection.backend.model.Vaga;
 import com.workonnection.backend.repository.UsuarioRepository;
 import com.workonnection.backend.repository.VagaRepository;
+import org.springframework.http.HttpStatus;
+import org.springframework.stereotype.Service;
+
+import java.time.Instant;
+import java.time.LocalDate;
+import java.time.ZoneId;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.UUID;
 
 @Service
 public class VagaService {
@@ -28,13 +26,13 @@ public class VagaService {
     private final UsuarioRepository usuarioRepository;
     private final NotificacaoService notificacaoService;
 
-    public VagaService(VagaRepository vagaRepository, UsuarioRepository usuarioRepository, NotificacaoService notificacaoService) {
+    public VagaService(VagaRepository vagaRepository, 
+                       UsuarioRepository usuarioRepository, 
+                       NotificacaoService notificacaoService) {
         this.vagaRepository = vagaRepository;
         this.usuarioRepository = usuarioRepository;
         this.notificacaoService = notificacaoService;
     }
-
-    // ── Criar ─────────────────────────────────────────────────────────────────
 
     public VagaResponseDTO salvar(VagaDTO dto, String usuarioId) {
         Usuario usuario = usuarioRepository.findById(usuarioId)
@@ -47,8 +45,6 @@ public class VagaService {
         return toDTO(vagaRepository.save(vaga));
     }
 
-    // ── Editar ────────────────────────────────────────────────────────────────
-
     public VagaResponseDTO editar(String vagaId, VagaDTO dto, String usuarioId) {
         Vaga vaga = buscarOuErro(vagaId);
         verificarDono(vaga, usuarioId, "editar");
@@ -56,57 +52,24 @@ public class VagaService {
         return toDTO(vagaRepository.save(vaga));
     }
 
-    private void validarData(String data) {
-        try {
-            LocalDate dataVaga = LocalDate.parse(data);
-            LocalDate hoje = LocalDate.now();
-
-            if (dataVaga.isBefore(hoje)) {
-                throw new ApiException("Data limite não pode ser no passado", HttpStatus.BAD_REQUEST);
-            }
-
-        } catch (Exception e) {
-            throw new ApiException("Data inválida", HttpStatus.BAD_REQUEST);
-        }
-    }
-
-    // ── Excluir ───────────────────────────────────────────────────────────────
-
     public void excluir(String vagaId, String usuarioId) {
         Vaga vaga = buscarOuErro(vagaId);
         verificarDono(vaga, usuarioId, "excluir");
         vagaRepository.deleteById(vagaId);
     }
 
-    private Instant converterParaTTL(String data) {
-        try {
-            LocalDate dataLocal = LocalDate.parse(data);
-
-            return dataLocal
-                    .atTime(23, 59, 59) // expira no fim do dia
-                    .atZone(java.time.ZoneId.systemDefault())
-                    .toInstant();
-
-        } catch (Exception e) {
-            throw new ApiException("Data inválida", HttpStatus.BAD_REQUEST);
-        }
-    }
-
-    // ── Like ──────────────────────────────────────────────────────────────────
-
     public VagaResponseDTO like(String vagaId, String usuarioId) {
         Vaga vaga = buscarOuErro(vagaId);
         Usuario remetente = usuarioRepository.findById(usuarioId).orElse(null);
 
-        List<String> likes    = new ArrayList<>(orEmpty(vaga.getLikes()));
+        List<String> likes = new ArrayList<>(orEmpty(vaga.getLikes()));
         List<String> dislikes = new ArrayList<>(orEmpty(vaga.getDislikes()));
 
-        // Toggle: remove se já curtiu, adiciona se não curtiu
         if (likes.contains(usuarioId)) {
             likes.remove(usuarioId);
         } else {
             likes.add(usuarioId);
-            dislikes.remove(usuarioId); // remove dislike se existia
+            dislikes.remove(usuarioId);
 
             if (remetente != null) {
                 notificacaoService.criar(
@@ -125,12 +88,10 @@ public class VagaService {
         return toDTO(vagaRepository.save(vaga));
     }
 
-    // ── Dislike ───────────────────────────────────────────────────────────────
-
     public VagaResponseDTO dislike(String vagaId, String usuarioId) {
         Vaga vaga = buscarOuErro(vagaId);
 
-        List<String> likes    = new ArrayList<>(orEmpty(vaga.getLikes()));
+        List<String> likes = new ArrayList<>(orEmpty(vaga.getLikes()));
         List<String> dislikes = new ArrayList<>(orEmpty(vaga.getDislikes()));
 
         if (dislikes.contains(usuarioId)) {
@@ -145,10 +106,8 @@ public class VagaService {
         return toDTO(vagaRepository.save(vaga));
     }
 
-    // ── Comentar ──────────────────────────────────────────────────────────────
-
     public VagaResponseDTO comentar(String vagaId, String usuarioId, ComentarioDTO dto) {
-        if (dto.getTexto() == null || dto.getTexto().isBlank()) {
+        if (dto.texto() == null || dto.texto().isBlank()) {
             throw new ApiException("Comentário não pode ser vazio", HttpStatus.BAD_REQUEST);
         }
 
@@ -162,14 +121,13 @@ public class VagaService {
                 UUID.randomUUID().toString(),
                 usuarioId,
                 usuario.getNome(),
-                dto.getTexto().trim(),
+                dto.texto().trim(),
                 Instant.now()
         ));
 
         vaga.setComentarios(lista);
         VagaResponseDTO result = toDTO(vagaRepository.save(vaga));
 
-        //Notifica o dono da vaga
         notificacaoService.criar(
             vaga.getUsuarioId(),
             usuarioId,
@@ -181,9 +139,6 @@ public class VagaService {
         
         return result;
     }
-    
-
-    // ── Excluir comentário ────────────────────────────────────────────────────
 
     public VagaResponseDTO excluirComentario(String vagaId, String comentarioId, String usuarioId) {
         Vaga vaga = buscarOuErro(vagaId);
@@ -194,7 +149,6 @@ public class VagaService {
                 .findFirst()
                 .orElseThrow(() -> new ApiException("Comentário não encontrado", HttpStatus.NOT_FOUND));
 
-        // Só o autor do comentário ou o dono da vaga pode excluir
         if (!alvo.getUsuarioId().equals(usuarioId) && !vaga.getUsuarioId().equals(usuarioId)) {
             throw new ApiException("Sem permissão", HttpStatus.FORBIDDEN);
         }
@@ -204,19 +158,15 @@ public class VagaService {
         return toDTO(vagaRepository.save(vaga));
     }
 
-    // ── Listar todas ──────────────────────────────────────────────────────────
-
     public List<VagaResponseDTO> listarTodas() {
-        return vagaRepository.findAll().stream().map(this::toDTO).collect(Collectors.toList());
+        return vagaRepository.findAll().stream().map(this::toDTO).toList();
     }
-
-    // ── Listar por usuário ────────────────────────────────────────────────────
 
     public List<VagaResponseDTO> listarPorUsuario(String usuarioId) {
-        return vagaRepository.findByUsuarioId(usuarioId).stream().map(this::toDTO).collect(Collectors.toList());
+        return vagaRepository.findByUsuarioId(usuarioId).stream().map(this::toDTO).toList();
     }
 
-    // ── Helpers ───────────────────────────────────────────────────────────────
+    // ── Helpers Privados ──────────────────────────────────────────────────────
 
     private Vaga buscarOuErro(String id) {
         return vagaRepository.findById(id)
@@ -230,22 +180,47 @@ public class VagaService {
     }
 
     private void preencherVaga(Vaga vaga, VagaDTO dto) {
-        validarData(dto.getData());
+        validarData(dto.data());
         
-        vaga.setEmpresa(dto.getEmpresa());
-        vaga.setCargo(dto.getCargo());
-        vaga.setDescricao(dto.getDescricao());
-        vaga.setModalidade(dto.getModalidade());
-        vaga.setHorario(dto.getHorario());
-        vaga.setBeneficios(dto.getBeneficios());
-        vaga.setLocalizacao(dto.getLocalizacao());
-        vaga.setSalario(dto.getSalario());
-        vaga.setData(dto.getData());
-        vaga.setRequisitos(dto.getRequisitos());
-        vaga.setEmail(dto.getEmail());
-        vaga.setTiposUsuario(dto.getTiposUsuario());
+        vaga.setEmpresa(dto.empresa());
+        vaga.setCargo(dto.cargo());
+        vaga.setDescricao(dto.descricao());
+        vaga.setModalidade(dto.modalidade());
+        vaga.setHorario(dto.horario());
+        vaga.setBeneficios(dto.beneficios());
+        vaga.setLocalizacao(dto.localizacao());
+        vaga.setSalario(dto.salario());
+        vaga.setData(dto.data());
+        vaga.setRequisitos(dto.requisitos());
+        vaga.setEmail(dto.email());
+        vaga.setTiposUsuario(dto.tiposUsuario());
 
-        vaga.setDataExpiracao(converterParaTTL(dto.getData()));
+        vaga.setDataExpiracao(converterParaTTL(dto.data()));
+    }
+
+    private void validarData(String data) {
+        try {
+            LocalDate dataVaga = LocalDate.parse(data);
+            LocalDate hoje = LocalDate.now();
+
+            if (dataVaga.isBefore(hoje)) {
+                throw new ApiException("Data limite não pode ser no passado", HttpStatus.BAD_REQUEST);
+            }
+        } catch (Exception e) {
+            throw new ApiException("Data inválida", HttpStatus.BAD_REQUEST);
+        }
+    }
+
+    private Instant converterParaTTL(String data) {
+        try {
+            LocalDate dataLocal = LocalDate.parse(data);
+            return dataLocal
+                    .atTime(23, 59, 59)
+                    .atZone(ZoneId.systemDefault())
+                    .toInstant();
+        } catch (Exception e) {
+            throw new ApiException("Data inválida", HttpStatus.BAD_REQUEST);
+        }
     }
 
     private VagaResponseDTO toDTO(Vaga v) {
